@@ -1,0 +1,97 @@
+#!/bin/sh
+
+prefix=/opt/gnome
+exec_prefix=${prefix}
+exec_prefix_set=no
+
+usage()
+{
+	cat <<EOF
+Usage: glib-config [OPTIONS] [LIBRARIES]
+Options:
+	[--prefix[=DIR]]
+	[--exec-prefix[=DIR]]
+	[--version]
+	[--libs]
+	[--cflags]
+Libraries:
+	glib
+	gmodule
+EOF
+	exit $1
+}
+
+if test $# -eq 0; then
+	usage 1 1>&2
+fi
+
+lib_glib=yes
+
+while test $# -gt 0; do
+  case "$1" in
+  -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
+  *) optarg= ;;
+  esac
+
+  case $1 in
+    --prefix=*)
+      prefix=$optarg
+      if test $exec_prefix_set = no ; then
+        exec_prefix=$optarg
+      fi
+      ;;
+    --prefix)
+      echo_prefix=yes
+      ;;
+    --exec-prefix=*)
+      exec_prefix=$optarg
+      exec_prefix_set=yes
+      ;;
+    --exec-prefix)
+      echo_exec_prefix=yes
+      ;;
+    --version)
+      echo 1.1.3
+      exit 0
+      ;;
+    --cflags)
+      if test "${prefix}/include" != /usr/include ; then
+        includes="-I${prefix}/include"
+      fi
+      echo_cflags=yes
+      ;;
+    --libs)
+      echo_libs=yes
+      ;;
+    glib)
+      lib_glib=yes
+      ;;
+    gmodule)
+      lib_gmodule=yes
+      ;;
+    *)
+      usage 1 1>&2
+      ;;
+  esac
+  shift
+done
+
+if test "$echo_prefix" = "yes"; then
+	echo $prefix
+fi
+if test "$echo_exec_prefix" = "yes"; then
+	echo $exec_prefix
+fi
+if test "$echo_cflags" = "yes"; then
+	echo -I${exec_prefix}/lib/glib/include $includes
+fi
+if test "$echo_libs" = "yes"; then
+	libs=""
+	if test "$lib_glib" = "yes"; then
+		libs="$libs -lglib-1.1"
+	fi
+	if test "$lib_gmodule" = "yes"; then
+		libs="-rdynamic -lgmodule-1.1 $libs -ldl"
+	fi
+	echo "-L${exec_prefix}/lib $libs"
+fi
